tests/valid/trait/method_call_short_ufcs_local_mutable_inferred_pure_receiver_float.facet
trait Runner {
  fn run(self: Self) -> unrestricted f64;
}

impl Runner for unrestricted f64 {
  fn run(self: Self) -> unrestricted f64 {
    self
  }
}

fn main() -> unrestricted f64 {
  let mut x = 1.5;
  (Runner::run x)
}
